services/platform/mail-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail-test
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mail-test.k8s.d-reis.com
    external-dns.alpha.kubernetes.io/target: thule.d-reis.com
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.priority: "10"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mail-test.k8s.d-reis.com
      secretName: mail-test-tls
  rules:
    - host: mail-test.k8s.d-reis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mail-test
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mail-test-authentik-outpost
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mail-test.k8s.d-reis.com`) && PathPrefix(`/outpost.goauthentik.io`)
      kind: Rule
      priority: 100
      services:
        - name: authentik-server
          namespace: authentik
          port: 80
  tls:
    secretName: mail-test-tls
